# raspbootin-rs

./: Cargo.toml
src/: bsp.rs  interface.rs  main.rs  print.rs  runtime_init.rs
src/bsp/: rpi3.rs  rpi4.rs
src/bsp/rpi3/: gpio.rs  link.ld  mbox.rs  panic_wait.rs
src/bsp/rpi3/uart0/: mod.rs
src/bsp/rpi3/uart1/: mod.rs
src/bsp/rpi4/: link.ld
